--- a/src/dashboard/components/CardStreamer.css
+++ b/src/dashboard/components/CardStreamer.css
@@ -4,7 +4,7 @@
     padding: 10px;
     margin: 20px 10px;
     background-color: #ececec;
-    color: #2c3e50;
+    color: #000;
 }
 
 .info-streamer-container {
@@ -18,9 +18,11 @@
 .info-container{
     width: 50%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     flex-wrap: wrap;
-    align-items: flex-start;
+    padding-bottom: 10px;
+    align-items: center;
+    gap: 20px;
 }
 
 .info-container-name {
@@ -55,8 +57,10 @@
 
 .info-name a {
     color: #000;
+    width: 100%;
     text-align: center;
     text-decoration: none;
+    word-wrap: break-word;
 }
 
 .info-container-viewers {
@@ -65,19 +69,14 @@
     justify-content: center;
 }
 
-.info-viewers div:nth-child(1){
+.info-viewers div:nth-child(1), .info-viewers div:nth-child(2){
+    font-size: 15px;
     text-align: center;
-    font-weight: bold;
-}
-
-.info-viewers div:nth-child(2){
-    text-align: center;
-    font-weight: 600;
-    font-family: 'Trebuchet MS', sans-serif;
+    font-weight: 700;
 }
 
 .info-streamer-description {
     padding: 10px 0;
-    font-size: 15px;
+    font-size: 16px;
     font-family: sans-serif;
 }
